fix: make the hamburger button not contract and shrink on smaller screens

--- a/src/features/HamburgerMenu/components/HamburgerButton/HamburgerButton.module.scss
+++ b/src/features/HamburgerMenu/components/HamburgerButton/HamburgerButton.module.scss
@@ -11,7 +11,7 @@
 
 	gap: 4px;
 	aspect-ratio: 1/1;
-	width: 48px;
+	min-width: 48px;
 
 	background-color: transparent;
 	border: none;
